Update 3. Dependency Injection.md

--- a/Week02/3. Dependency Injection.md
+++ b/Week02/3. Dependency Injection.md
@@ -28,7 +28,7 @@ public class Repository
 
 Advantages include:
 
-1. If the the class is dependant on the dependency and will break without it, this way of injecting will make sure the class is not created without it.
+1. If the class is dependant on the dependency and will break without it, this way of injecting will make sure the class is not created without it.
 
 2. Since the cunstructor is only called once, when the object is created, you can be sure that through the entire lifetime of the object, it will keep the same dependency. That is if you do not have some other methods to change the dependency.
 
